welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value False
  var vuBiscuit :Boolean = False 
                           ^Program:6: error: not found: value True
    vuBiscuit = True
                ^