welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit :Boolean = False 
  for (compt <- 1 to 6) {
  avance() 
  if (estSurBiscuit) {
    vuBiscuit = True
  }
  }
  return vuBiscuit
}